--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <header><!--шапка: початок-->
             <nav><!--Навігаційні елементи: початок-->
-                <a href=""><!--логотип з посиланням-->
-                    <p><span>Web</span>Studio</p>
+                <a href="./index.html"><!--логотип з посиланням-->
+                    <p>WebStudio</p>
                 </a>
                 <ul><!--список посилань: початок-->
                     <li><a href="">Studio</a></li>
@@ -18,14 +18,17 @@
                     <li><a href="">Contacts</a></li>
                 </ul><!--список посилань: кінець-->
             </nav><!--Навігаційні елементи: кінець-->
-            <ul>
-                <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
+            <address>
+                <ul>
+                    <li>
+                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
+            
         </header><!--Шапка: кінець-->
         <main><!--Основний контент: початок-->
             <section><!--Секція 1: початок-->
@@ -92,10 +95,11 @@
             </section><!--Секція 4: кінець-->
         </main><!--Основний контент: кінець-->
         <footer><!--підвал сторінки: початок-->
-            <a href=""><!--логотип з посиланням-->
-                <p><span>Web</span>Studio</p>
+            <a href="./index.html"><!--логотип з посиланням-->
+             <p>WebStudio</p>
             </a>
-            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+            </p>
         </footer><!--підвал сторінки: кінець-->
     </body>
 </html>
