--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header><!--шапка: початок-->
             <nav><!--Навігаційні елементи: початок-->
                 <a href="./index.html"><!--логотип з посиланням-->
-                    <p>WebStudio</p>
+                  WebStudio
                 </a>
                 <ul><!--список посилань: початок-->
                     <li><a href="">Studio</a></li>
@@ -74,20 +74,21 @@
                 <h2>Our Team</h2><!--Заголовок секції 3-->
                 <ul><!--Список карток спеціалістів-->
                     <li>
-                        <img src="./images/img-mark_guerrero.jpg" alt="foto Mark Guerrero" width="264" height="260"></li>
                         <h3>Mark Guerrero</h3>
+                        <img src="./images/img-mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260"></li>
                         <p>Product Designer</p>
                     </li>
                     <li>
-                        <img src="./images/img-tom_ford.jpg" alt="foto Tom Ford" width="264" height="260"></li>
+                        <img src="./images/img-tom_ford.jpg" alt="Tom Ford" width="264" height="260"></li>
                         <h3>Tom Ford</h3>
                         <p>Frontend Developer</p>
                     </li>
-                    <li><img src="./images/img-camila_garcia.jpg" alt="foto Camila Garcia" width="264" height="260"></li>
+                    <li>
+                        <img src="./images/img-camila_garcia.jpg" alt="Camila Garcia" width="264" height="260"></li>
                         <h3>Camila Garcia</h3>
                         <p>Marketing</p>
                     </li>    
-                    <li><img src="./images/img-daniel_wilson.jpg" alt="foto Daniel Wilson" width="264" height="260"></li>
+                    <li><img src="./images/img-daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260"></li>
                         <h3>Daniel Wilson</h3>
                         <p>UI Designer</p>
                     </li>
@@ -96,10 +97,9 @@
         </main><!--Основний контент: кінець-->
         <footer><!--підвал сторінки: початок-->
             <a href="./index.html"><!--логотип з посиланням-->
-             <p>WebStudio</p>
+               WebStudio
             </a>
-            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-            </p>
+            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </footer><!--підвал сторінки: кінець-->
     </body>
 </html>
