--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
         <title>WebStudio</title>
     </head>
     <body>
-        <header><!--шапка: початок-->
-            <nav><!--Навігаційні елементи: початок-->
-                <a href="./index.html"><!--логотип з посиланням-->
-                  WebStudio
+        <header>
+            <nav>
+                <a href="./index.html">
+                    WebStudio
                 </a>
-                <ul><!--список посилань: початок-->
+                <ul>
                     <li><a href="">Studio</a></li>
                     <li><a href="">Portfolio</a></li>
                     <li><a href="">Contacts</a></li>
-                </ul><!--список посилань: кінець-->
-            </nav><!--Навігаційні елементи: кінець-->
+                </ul>
+            </nav>
             <address>
                 <ul>
                     <li>
@@ -28,15 +28,14 @@
                     </li>
                 </ul>
             </address>
-            
-        </header><!--Шапка: кінець-->
-        <main><!--Основний контент: початок-->
-            <section><!--Секція 1: початок-->
+        </header>
+        <main>
+            <section>
                 <h1>Effective Solutions for Your Business</h1>
-                <button type="button">Order Service</button><!--Кнопка виконує інтерактивну дію по визову вспливаючого вікна.-->
-            </section><!--Секція 1: кінець-->
-            <section><!--Секція 2: початок-->
-                <h2>Our advantages</h2><!--Заголовок секції 2, котрий не повинен відображатися на сторінці (атрибут hidden приховує елемент)-->
+                <button type="button">Order Service</button>
+            </section>
+            <section>
+                <h2>Our advantages</h2>
                 <ul>
                     <li>
                         <h3>Strategy</h3>
@@ -55,10 +54,10 @@
                         <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                     </li>
                 </ul>
-            </section><!--Секція 2: кінець-->
-            <section><!--Секція 3: початок-->
-                <h2>What are we doing</h2><!--Заголовок секції 3-->
-                <ul><!--Однотипні картинки загорнути в список-->
+            </section>
+            <section>
+                <h2>What are we doing</h2>
+                <ul>
                     <li>
                         <img src="./images/img1.jpg" alt="img1" width="360" height="300">
                     </li>
@@ -69,37 +68,38 @@
                         <img src="./images/img3.jpg" alt="img3" width="360" height="300">
                     </li>
                 </ul>
-            </section><!--Секція 3: кінець-->
-            <section><!--Секція 4: початок-->
-                <h2>Our Team</h2><!--Заголовок секції 3-->
-                <ul><!--Список карток спеціалістів-->
+            </section>
+            <section>
+                <h2>Our Team</h2>
+                <ul>
                     <li>
+                        <img src="./images/img-mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
                         <h3>Mark Guerrero</h3>
-                        <img src="./images/img-mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260"></li>
                         <p>Product Designer</p>
                     </li>
                     <li>
-                        <img src="./images/img-tom_ford.jpg" alt="Tom Ford" width="264" height="260"></li>
+                        <img src="./images/img-tom_ford.jpg" alt="Tom Ford" width="264" height="260">
                         <h3>Tom Ford</h3>
                         <p>Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="./images/img-camila_garcia.jpg" alt="Camila Garcia" width="264" height="260"></li>
+                        <img src="./images/img-camila_garcia.jpg" alt="Camila Garcia" width="264" height="260">
                         <h3>Camila Garcia</h3>
                         <p>Marketing</p>
                     </li>    
-                    <li><img src="./images/img-daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260"></li>
+                    <li>
+                        <img src="./images/img-daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260">
                         <h3>Daniel Wilson</h3>
                         <p>UI Designer</p>
                     </li>
                 </ul>
-            </section><!--Секція 4: кінець-->
-        </main><!--Основний контент: кінець-->
-        <footer><!--підвал сторінки: початок-->
-            <a href="./index.html"><!--логотип з посиланням-->
+            </section>
+        </main>
+        <footer>
+            <a href="./index.html">
                WebStudio
             </a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </footer><!--підвал сторінки: кінець-->
+        </footer>
     </body>
 </html>
