--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                 <h2>What are we doing</h2>
                 <ul>
                     <li>
-                        <img src="./images/img1.jpg" alt="img1" width="360" height="300">
+                        <img src="./images/img1.jpg" alt="monitor screen" width="360" height="300">
                     </li>
                     <li>
-                        <img src="./images/img2.jpg" alt="img2" width="360" height="300">
+                        <img src="./images/img2.jpg" alt="smartphone screens" width="360" height="300">
                     </li>
                     <li>
-                        <img src="./images/img3.jpg" alt="img3" width="360" height="300">
+                        <img src="./images/img3.jpg" alt="laptop and phone" width="360" height="300">
                     </li>
                 </ul>
             </section>
